--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "node src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
     "test": "ENV=test && npx tsc && db-migrate --env test up && jasmine && db-migrate db:drop test",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "migrate": "db-migrate --env dev up"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.2",
     "express": "^4.17.1",
@@ -22,8 +24,10 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^7.14.7",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
